--- a/src/App.css
+++ b/src/App.css
@@ -108,16 +108,28 @@ header {
 
 .hero{
 
-  margin: 10% 11% 0 11%;
+  margin: 6% 11% 0 11%;
   padding: 1% 3% 1% 3%;
+  
   
 }
 
 .hero h1{
   font-size: 7rem;
-  line-height: 80%;
+ 
 }
 
 .hero h2{
   font-size: 6rem;
+}
+
+.hero h2::before{
+
+  background-color: #46b96c;
+  content: "";
+  position: absolute;
+  width: calc(70% + 4px);
+  height: 25%;
+  z-index: -1;
+  transform: rotate(-2deg);
 }
