--- a/src/App.css
+++ b/src/App.css
@@ -133,3 +133,66 @@ header {
   z-index: -1;
   transform: rotate(-2deg);
 }
+
+.about{
+  margin: 12% 11% 0 14%;
+  padding: 1% 3% 1% 3%;
+  width: 70%;
+
+  background: rgba(255, 255, 255, 0.1);
+
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  border-radius: 10px;
+
+
+
+}
+
+.section-heading{
+
+  display: grid;
+  grid-template-columns: auto 85%;
+}
+
+/* .about h1::before{
+  background-color: #46b96c;
+  content: "";
+  position: absolute;
+  width: calc(10% + 4px);
+  height: 1%;
+  z-index: -1;
+  
+  transform: rotate(-2deg);
+} */
+
+.about h1{
+  text-decoration: underline 25% #46b96c;
+}
+.about hr{
+  margin-top: 2.5%;
+  height: 1px;  
+  background-color: grey;  
+  border: none;  
+}
+
+.about-content{
+  margin-top: 5%;
+  display : grid;
+  grid-template-columns: 30% 70%;
+  text-align: justify;
+}
+
+.about-content img{
+  width: 75%;
+}
+
+.skills{
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.skills ul li::before{
+  margin-right: 2%;
+  content: "\2B9A"; 
+}
