--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ header {
 
 .about{
   margin: 12% 11% 0 14%;
-  padding: 1% 3% 1% 3%;
+  padding: 1% 3% 3% 3%;
   width: 70%;
 
   background: rgba(255, 255, 255, 0.1);
@@ -190,9 +190,93 @@ header {
 .skills{
   display: grid;
   grid-template-columns: auto auto;
+  
 }
 
 .skills ul li::before{
   margin-right: 2%;
   content: "\2B9A"; 
+  color: #46b96c;
+}
+
+.experience{
+  margin: 7% 11% 0 14%;
+  padding: 1% 3% 1% 3%;
+  width: 70%;
+}
+
+.experience-heading{
+  display: grid;
+  grid-template-columns: 37.5% 25% 37.5%;
+}
+
+.experience-heading hr{
+  margin-top: 5%;
+  height: 1px;  
+  background-color: grey;  
+  border: none;  
+}
+
+.list-group{
+  margin-top: 5%;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  
+
+}
+
+.sidebar{
+  
+  background: rgba(255, 255, 255, 0.1);
+
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  padding-top: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 1%;
+  height:fit-content
+}
+
+.sidebar li{
+  margin-top: 5%;
+  padding: 5% 5%;
+  
+}
+.exp-content{
+  padding-left: 5%;
+  
+  transition: 5s ease-in;
+
+}
+
+.active-exp{
+  border-left: #46b96c solid 2px;
+  background-color: rgb(59, 59, 59);
+  transition: 0.2s;
+  
+}
+
+.exp-content h1 span{
+  color: orange;
+ 
+}
+
+.sidebar li:hover{
+  background-color: rgb(59, 59, 59);
+}
+
+.exp-content ul{
+  list-style-type: "\2B9A"; 
+}
+
+.exp-content ul li::marker{
+  
+  
+  color: #46b96c;
+  
+}
+
+.exp-content ul li{
+  margin-top: 2%;
 }
