--- a/src/App.css
+++ b/src/App.css
@@ -280,3 +280,61 @@ header {
 .exp-content ul li{
   margin-top: 2%;
 }
+
+.projects{
+  margin: 7% 5% 0 5%;
+  padding: 1% 3% 1% 3%;
+  
+
+}
+
+.projects-heading{
+  display: grid;
+  grid-template-columns: 35% 30% 35%;
+
+
+}
+.projects-heading hr{
+  margin-top: 5%;
+  height: 1px;  
+  background-color: grey;  
+  border: none;  
+  
+}
+
+.project-display{
+  margin: 5% 11% 0 0;;
+  padding: 3% 3% 3% 3%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background: #101010;
+
+  backdrop-filter: blur(4.5px);
+  -webkit-backdrop-filter: blur(4.5px);
+  border-radius: 10px;
+  border: 1px solid rgb(63, 62, 62);
+
+}
+
+.card{
+  margin-top: 5%;
+  height: 250px;
+  width: 350px;
+  background-color: #212529;
+  border-radius: 10px;
+  padding-left: 10%;
+  padding-right: 10%;
+  text-align: start;
+}
+
+.github-logo{
+  
+  margin-left: 90%;
+  margin-top: 5%;
+}
+
+.github-logo:hover{
+   
+  transform : scale(1.1);
+}
